--- a/Views/Book/Booklist.cshtml
+++ b/Views/Book/Booklist.cshtml
@@ -1,3 +1,4 @@
+@using Bookish_cs.Controllers;
 @model BookManagementViewModel
 @{
     ViewData["Title"] = "Book Management Page";
@@ -12,7 +13,7 @@
         foreach (var book in Model.Books)
         {
             <p>
-                <strong>Book title:</strong> book.Title
+                <strong>Book title:</strong> <a asp-controller="Book" asp-action="@nameof(BookController.BookPage)" asp-route-id="@book.Id">@book.Title</a>
             </p>
         }
     }
